# seatbelt2

./: .gitignore  .gitmodules  CMakeLists.txt  meson.build  test.bs  vcpkg.json
.github/workflows/: cmake.yml  meson.yml  tests.yml
src/: error_codes.hpp  lexer.cpp  lexer.hpp  main.cpp  meson.build  parser.cpp  parser.hpp  source_location.hpp  tokens.hpp  types.hpp  utils.cpp  utils.hpp
src/parser_nodes/: .gitignore  meson.build  parser_nodes.cpp  parser_nodes.hpp
subprojects/: .gitignore
tools/: .gitignore  grabber.py  grabber.sh  header_libs.py  meson.build
tools/ast-type-generator/: backseat.types  emitter.py  lexer.py  main.py  parser.py
tools/parser-generator-for-seatbelt2/: Cargo.toml
tools/parser-generator-for-seatbelt2/src/: main.rs  parser.rs  scanner.rs
type_definitions/: parser_nodes.types
